--- a/Inception/cast.html
+++ b/Inception/cast.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="app cast.css">
+    <link rel="stylesheet" href="app_cast.css">
     <title>Cast</title>
 </head>
 <body>
-    <div class="body"></div>
-     
-    <h1>test</h1>
+    <div class="body">
+    <img src="Group_19.png">
+    <img src="Group_21.png">
+    <img src="Group_22.png">
+    </div>
 </body>
 </html>
