--- a/Inception/index.html
+++ b/Inception/index.html
@@ -11,7 +11,10 @@
     <div class="body"></div>
 
     <div class="header">
-        
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+
     </div>
      
     <h1>test</h1>
