--- a/Inception/cast.html
+++ b/Inception/cast.html
@@ -15,7 +15,8 @@
     <img src="Group_22.png">
     </div>
     <div class="header_pilt">
-    <img src="Header.png">
+        <div class="header-inner"></div>
+    <!--<img src="Header.png">-->
     </div>
 </body>
 </html>
