--- a/Inception/preview.html
+++ b/Inception/preview.html
@@ -6,30 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="app_preview.css">
     <link href="https://fonts.googleapis.com/css?family=Monda&display=swap" rel="stylesheet">
-    <div class="video>"></div><iframe width="610" height="398"
-    src="https://www.youtube.com/embed/YoHD9XEInc0"
-    frameborder="0">
-</iframe>
-</div>
+    
 
     <title>Preview</title>
 </head>
 <body>
-    <div class="text">
-     
-    <h1>Inception is a 2010 science fiction<br> 
-        action film written and directed by <br>
-        Christopher Nolan, who produced the <br>
-        film with his wife, Emma Thomas. <br>
-        <br>
-        The film stars Leonardo DiCaprio as a <br>
-        professional thief who steals <br>
-        information by infiltrating the <br>
-        subconscious, and is offered a chance <br>
-        to have his criminal history erased as <br>
-        payment for the implantation of <br>
-        another person's idea into a target's <br>
-        subconscious.</h1>
+    <div class="text">     
+        <h1>Inception is a 2010 science fiction<br> 
+            action film written and directed by <br>
+            Christopher Nolan, who produced the <br>
+            film with his wife, Emma Thomas. <br>
+            <br>
+            The film stars Leonardo DiCaprio as a <br>
+            professional thief who steals <br>
+            information by infiltrating the <br>
+            subconscious, and is offered a chance <br>
+            to have his criminal history erased as <br>
+            payment for the implantation of <br>
+            another person's idea into a target's <br>
+            subconscious.
+        </h1>
     </div>
+    <div class="video">
+            <iframe width="610" height="398"
+            src="https://www.youtube.com/embed/YoHD9XEInc0"
+            frameborder="0">
+            </iframe>
+        </div>
 </body>
 </html>
